Edits/Checkbox act

--- a/Jazlyn Pedersen /Resources and Recycling.ipynb
+++ b/Jazlyn Pedersen /Resources and Recycling.ipynb
@@ -663,7 +663,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -711,6 +711,8 @@
        "    <p>Check the box next to the energy source if it is a RENEWABLE energy source.</p>\n",
        "    <ol id=\"boolean-permutations\">\n",
        "        <li>Solar Energy<input class=\"booleanInput\" type=\"checkbox\"><span class=\"perm-answer\"></span></li><br>\n",
+       "\n",
+       "\n",
        "        <li>Oil Energy<input class=\"booleanInput\" type=\"checkbox\"><span class=\"perm-answer\"></span></li><br>\n",
        "        <li>Coal Energy<input class=\"booleanInput\" type=\"checkbox\"><span class=\"perm-answer\"></span></li><br>\n",
        "        <li>Natural Gas Energy<input class=\"booleanInput\" type=\"checkbox\"><span class=\"perm-answer\"></span></li><br>\n",
@@ -779,6 +781,8 @@
     "    <p>Check the box next to the energy source if it is a RENEWABLE energy source.</p>\n",
     "    <ol id=\"boolean-permutations\">\n",
     "        <li>Solar Energy<input class=\"booleanInput\" type=\"checkbox\"><span class=\"perm-answer\"></span></li><br>\n",
+    "\n",
+    "\n",
     "        <li>Oil Energy<input class=\"booleanInput\" type=\"checkbox\"><span class=\"perm-answer\"></span></li><br>\n",
     "        <li>Coal Energy<input class=\"booleanInput\" type=\"checkbox\"><span class=\"perm-answer\"></span></li><br>\n",
     "        <li>Natural Gas Energy<input class=\"booleanInput\" type=\"checkbox\"><span class=\"perm-answer\"></span></li><br>\n",
@@ -794,6 +798,281 @@
     "<div id=\"is-permutation-feedback-container\">\n",
     "<h3>Solutions</h3>\n",
     "</div>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<html>\n",
+       "<body>\n",
+       "\n",
+       "<p>1. Solar Energy:</p>\n",
+       "\n",
+       "<input type=\"checkbox\" id=\"myCheck\"  onclick=\"myFunction()\">\n",
+       "\n",
+       "<p id=\"text\" style=\"display:none\">Correct! Solar Energy is RENEWABLE!</p>\n",
+       "\n",
+       "<script>\n",
+       "function myFunction() {\n",
+       "  var checkBox = document.getElementById(\"myCheck\");\n",
+       "  var text = document.getElementById(\"text\");\n",
+       "  if (checkBox.checked == true){\n",
+       "    text.style.display = \"block\";\n",
+       "  } else {\n",
+       "     text.style.display = \"none\";\n",
+       "  }\n",
+       "}\n",
+       "</script>\n",
+       "    \n",
+       "</body>\n",
+       "</html>\n",
+       "\n"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "%%html\n",
+    "<html>\n",
+    "<body>\n",
+    "\n",
+    "<p>1. Solar Energy:</p>\n",
+    "\n",
+    "<input type=\"checkbox\" id=\"myCheck\"  onclick=\"myFunction()\">\n",
+    "\n",
+    "<p id=\"text\" style=\"display:none\">Correct! Solar Energy is RENEWABLE!</p>\n",
+    "\n",
+    "<script>\n",
+    "function myFunction() {\n",
+    "  var checkBox = document.getElementById(\"myCheck\");\n",
+    "  var text = document.getElementById(\"text\");\n",
+    "  if (checkBox.checked == true){\n",
+    "    text.style.display = \"block\";\n",
+    "  } else {\n",
+    "     text.style.display = \"none\";\n",
+    "  }\n",
+    "}\n",
+    "</script>\n",
+    "    \n",
+    "</body>\n",
+    "</html>\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<html>\n",
+       "<body>\n",
+       "\n",
+       "<p>2. Oil Energy:</p>\n",
+       "\n",
+       "<input type=\"checkbox\" id=\"myCheck\"  onclick=\"myFunction1()\">\n",
+       "\n",
+       "<p id=\"text\" style=\"display:none\">Incorrect, Oil Energy is NONRENEWABLE because humans are using it faster than it is replacing itself.</p>\n",
+       "\n",
+       "<script>\n",
+       "function myFunction1() {\n",
+       "  var checkBox = document.getElementById(\"myCheck\");\n",
+       "  var text = document.getElementById(\"text\");\n",
+       "  if (checkBox.checked == true){\n",
+       "    text.style.display = \"block\";\n",
+       " ## } else {\n",
+       "##   text.style.display = \"none\";\n",
+       "  }\n",
+       "}\n",
+       "</script>\n",
+       "\n",
+       "</body>\n",
+       "</html>\n"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "%%html\n",
+    "<html>\n",
+    "<body>\n",
+    "\n",
+    "<p>2. Oil Energy:</p>\n",
+    "\n",
+    "<input type=\"checkbox\" id=\"myCheck\"  onclick=\"myFunction1()\">\n",
+    "\n",
+    "<p id=\"text\" style=\"display:none\">Incorrect, Oil Energy is NONRENEWABLE because humans are using it faster than it is replacing itself.</p>\n",
+    "\n",
+    "<script>\n",
+    "function myFunction1() {\n",
+    "  var checkBox = document.getElementById(\"myCheck\");\n",
+    "  var text = document.getElementById(\"text\");\n",
+    "  if (checkBox.checked == true){\n",
+    "    text.style.display = \"block\";\n",
+    "  } \n",
+    "    else {\n",
+    "  text.style.display = \"none\";\n",
+    "  }\n",
+    "}\n",
+    "</script>\n",
+    "\n",
+    "</body>\n",
+    "</html>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<html>\n",
+       "<body>\n",
+       "\n",
+       "<p>3. Coal Energy:</p>\n",
+       "\n",
+       "<input type=\"checkbox\" id=\"myCheck\"  onclick=\"myFunction()\">\n",
+       "\n",
+       "<p id=\"text\" style=\"display:none\">Incorrect! Coal Energy is NONRENEWABLE!</p>\n",
+       "\n",
+       "<script>\n",
+       "function myFunction() {\n",
+       "  var checkBox = document.getElementById(\"myCheck\");\n",
+       "  var text = document.getElementById(\"text\");\n",
+       "  if (checkBox.checked == true){\n",
+       "    text.style.display = \"block\";\n",
+       "  } else {\n",
+       "     text.style.display = \"none\";\n",
+       "  }\n",
+       "}\n",
+       "</script>\n",
+       "    \n",
+       "</body>\n",
+       "</html>\n",
+       "\n"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "%%html\n",
+    "<html>\n",
+    "<body>\n",
+    "\n",
+    "<p>3. Coal Energy:</p>\n",
+    "\n",
+    "<input type=\"checkbox\" id=\"myCheck\"  onclick=\"myFunction()\">\n",
+    "\n",
+    "<p id=\"text\" style=\"display:none\">Incorrect! Coal Energy is NONRENEWABLE!</p>\n",
+    "\n",
+    "<script>\n",
+    "function myFunction() {\n",
+    "  var checkBox = document.getElementById(\"myCheck\");\n",
+    "  var text = document.getElementById(\"text\");\n",
+    "  if (checkBox.checked == true){\n",
+    "    text.style.display = \"block\";\n",
+    "  } else {\n",
+    "     text.style.display = \"none\";\n",
+    "  }\n",
+    "}\n",
+    "</script>\n",
+    "    \n",
+    "</body>\n",
+    "</html>\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<html>\n",
+       "<body>\n",
+       "\n",
+       "<p>4. Natural Gas Energy:</p>\n",
+       "\n",
+       "<input type=\"checkbox\" id=\"myCheck\"  onclick=\"myFunction()\">\n",
+       "\n",
+       "<p id=\"text\" style=\"display:none\">Correct! Solar Energy is RENEWABLE!</p>\n",
+       "\n",
+       "<script>\n",
+       "function myFunction() {\n",
+       "  var checkBox = document.getElementById(\"myCheck\");\n",
+       "  var text = document.getElementById(\"text\");\n",
+       "  if (checkBox.checked == true){\n",
+       "    text.style.display = \"block\";\n",
+       "  } else {\n",
+       "     text.style.display = \"none\";\n",
+       "  }\n",
+       "}\n",
+       "</script>\n",
+       "    \n",
+       "</body>\n",
+       "</html>\n",
+       "\n"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "%%html\n",
+    "<html>\n",
+    "<body>\n",
+    "\n",
+    "<p>4. Natural Gas Energy:</p>\n",
+    "\n",
+    "<input type=\"checkbox\" id=\"myCheck\"  onclick=\"myFunction()\">\n",
+    "\n",
+    "<p id=\"text\" style=\"display:none\">Correct! Solar Energy is RENEWABLE!</p>\n",
+    "\n",
+    "<script>\n",
+    "function myFunction() {\n",
+    "  var checkBox = document.getElementById(\"myCheck\");\n",
+    "  var text = document.getElementById(\"text\");\n",
+    "  if (checkBox.checked == true){\n",
+    "    text.style.display = \"block\";\n",
+    "  } else {\n",
+    "     text.style.display = \"none\";\n",
+    "  }\n",
+    "}\n",
+    "</script>\n",
+    "    \n",
+    "</body>\n",
+    "</html>\n",
+    "\n"
    ]
   },
   {
