--- a/Jazlyn Pedersen /Resources and Recycling.ipynb
+++ b/Jazlyn Pedersen /Resources and Recycling.ipynb
@@ -1597,7 +1597,7 @@
     "<body>\n",
     "\n",
     "<h1>Coal</h1>\n",
-    "<p>Burning coal is a major source of carbon dioxide (CO2) emissions, which means coal is a fossil fuel. Air pollution from coal-fired power plants includes sulfur dioxide, nitrogen oxides, particulate matter, and heavy metals, leading to smog, acid rain and highly effects the air we breath. Did you know Alberta ranks second in Canada for the most active number of coal mines? British Columbia operates 10 coal mines, Alberta 9, Saskatchewan 3 and New Brunswick one. Nova Scotia operates several small-scale mines as well.</p>\n",
+    "<p>Burning coal is a major source of carbon dioxide (CO2) emissions, which means coal is a fossil fuel. Air pollution from coal-fired power plants includes sulfur dioxide, nitrogen oxides, particulate matter, and heavy metals, leading to smog, acid rain and highly effects the air we breathe. Did you know Alberta ranks second in Canada for the most active number of coal mines? British Columbia operates 10 coal mines, Alberta 9, Saskatchewan 3 and New Brunswick one. Nova Scotia operates several small-scale mines as well.</p>\n",
     "<table style=\"width:100%\">\n",
     "  <tr>\n",
     "    <th>Good Traits</th>\n",
