changed banners and root directory name

--- a/Nathan/Ecoglobalization/Ecoglobalization.ipynb
+++ b/Nathan/Ecoglobalization/Ecoglobalization.ipynb
@@ -15,9 +15,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![alt text][top-banner]\n",
-    "\n",
-    "[top-banner]: ./imgs/callysto-top-banner.jpg"
+    "[![logo](https://callysto.ca/wp-content/uploads/2018/06/Callysto_Notebook-Banner_Top_06.06.18.jpg)](https://callysto.ca)"
    ]
   },
   {
@@ -1356,9 +1354,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![alt text][bottom-banner]\n",
-    "\n",
-    "[bottom-banner]: ./imgs/callysto-bottom-banner.jpg"
+    "[![logo](https://callysto.ca/wp-content/uploads/2018/07/Callysto-Notebook-Banner_Bottom_07.30.18.jpg)](https://callysto.ca/)"
    ]
   },
   {
@@ -1385,7 +1381,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
