--- a/Nathan/solvingProblemsUsingCombinations/solvingProblemsUsingCombinations.ipynb
+++ b/Nathan/solvingProblemsUsingCombinations/solvingProblemsUsingCombinations.ipynb
@@ -4,9 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![alt text][top-banner]\n",
-    "\n",
-    "[top-banner]: ./images/callysto-top-banner.jpg"
+    "[![logo](https://callysto.ca/wp-content/uploads/2018/06/Callysto_Notebook-Banner_Top_06.06.18.jpg)](https://callysto.ca)"
    ]
   },
   {
@@ -35,7 +33,7 @@
        "    $('div.input').hide()\n",
        "  });\n",
        "</script>\n",
-       "<form action=\"javascript:code_toggle()\"><input type=\"submit\" id=\"toggleButton\" value=\"Show Code\"></form>"
+       "<form action=\"javascript:code_toggle()\"><input type=\"submit\" id=\"toggleButton\" value=\"Show Code\"></form>\n"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -86,7 +84,7 @@
        "</script>\n",
        "<script src=\"./js/nt.js\"></script>\n",
        "<link rel=\"stylesheet\" href=\"css/combinations.css\">\n",
-       "<link rel=\"stylesheet\" type=\"text/css\" href=\"css/nt.css\">"
+       "<link rel=\"stylesheet\" type=\"text/css\" href=\"css/nt.css\">\n"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -145,7 +143,7 @@
        "\n",
        "<div id=\"pascals-triangle-container\">\n",
        "    <h2>Pascals Triangle</h2>\n",
-       "</div>"
+       "</div>\n"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -207,7 +205,7 @@
        "</div>\n",
        "<div id=\"detailed-table-solutions\">\n",
        "    \n",
-       "</div>"
+       "</div>\n"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -318,7 +316,7 @@
        "    Another everyday example of combinations, although not entirely useful, is making groups of students. In the next section \n",
        "    we will take a look at the probability of certain events happening using combinations.</p>\n",
        "</div>\n",
-       "<script src=\"js/binomial_coefficient.js\"></script>"
+       "<script src=\"js/binomial_coefficient.js\"></script>\n"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -441,7 +439,7 @@
        "    <input id=\"probability-answer\" type=\"text\" maxlength=8>\n",
        "    <p id=\"probability-feedback\" class=\"hidden\"></p>\n",
        "</div>\n",
-       "<input type=\"button\" value=\"Submit answer\" onclick=\"check_probability_answer()\">"
+       "<input type=\"button\" value=\"Submit answer\" onclick=\"check_probability_answer()\">\n"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -533,7 +531,7 @@
        "    nt.register(\"dep-ind-exercise-container\", \"dep-ind-solution-container\", \"./data/ind-dep.json\", function() {\n",
        "       nt.create_exercises(\"dep-ind-exercise-container\"); \n",
        "    });\n",
-       "</script>"
+       "</script>\n"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -598,7 +596,7 @@
        "<div id=\"combination-exercises-solutions-container\">\n",
        "\n",
        "</div>\n",
-       "<script src=\"./js/create_exercises.js\"></script>"
+       "<script src=\"./js/create_exercises.js\"></script>\n"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -628,9 +626,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![alt text][bottom-banner]\n",
-    "\n",
-    "[bottom-banner]: ./images/callysto-bottom-banner.jpg"
+    "[![logo](https://callysto.ca/wp-content/uploads/2018/07/Callysto-Notebook-Banner_Bottom_07.30.18.jpg)](https://callysto.ca/)"
    ]
   },
   {
@@ -657,7 +653,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
