--- a/Jazlyn Pedersen /Hail Damage Trial.ipynb
+++ b/Jazlyn Pedersen /Hail Damage Trial.ipynb
@@ -9,55 +9,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "                    <script>\n",
-       "                    document.getElementById('toggleButton').onclick = function () {\n",
-       "                        if (code_shown) {\n",
-       "                            $('div.input').hide('500');\n",
-       "                            $('#toggleButton').val('Show Code')\n",
-       "                        } else {\n",
-       "                            $('div.input').show('500');\n",
-       "                            $('#toggleButton').val('Hide Code')\n",
-       "                        }\n",
-       "                        code_shown = !code_shown\n",
-       "                    }\n",
-       "\n",
-       "                    document.getElementById('init').onclick = function () {\n",
-       "                        runAll = document.getElementById('run_all_cells_below').childNodes[1]\n",
-       "                        console.log(runAll)\n",
-       "                        runAll.click()\n",
-       "                    }\n",
-       "\n",
-       "                    $(document).ready(function () {\n",
-       "                        code_shown = true;\n",
-       "                        $('div.input').hide()\n",
-       "                    });\n",
-       "                </script>\n",
-       "                <input type=\"submit\" id=\"toggleButton\" value=\"Show Code\">\n",
-       "                <input id=\"init\" type=\"submit\" value=\"Initialize\">\n"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "import myMagics\n",
-    "%uiButtons"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -79,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -91,7 +42,7 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -114,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -126,7 +77,7 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -158,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -170,7 +121,7 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -213,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -225,7 +176,7 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -244,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 15,
    "metadata": {
     "scrolled": false
    },
@@ -264,10 +215,10 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.YouTubeVideo at 0x7ff9bac4b5c0>"
+       "<IPython.lib.display.YouTubeVideo at 0x7efcc489aac8>"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -286,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 16,
    "metadata": {
     "scrolled": true
    },
@@ -300,7 +251,7 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -321,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -396,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -449,7 +400,7 @@
        "    </style>\n",
        "    \n",
        "    <body>\n",
-       "    <div style=\"height: 300px\">\n",
+       "    <div style=\"height: 360px\">\n",
        "        <ul id=\"list\">\n",
        "            <li>\n",
        "            <label for=\"q1\">1) There are ______ number of blocks in the simulated hail study experiment.</label>\n",
@@ -575,7 +526,7 @@
     "    </style>\n",
     "    \n",
     "    <body>\n",
-    "    <div style=\"height: 300px\">\n",
+    "    <div style=\"height: 360px\">\n",
     "        <ul id=\"list\">\n",
     "            <li>\n",
     "            <label for=\"q1\">1) There are ______ number of blocks in the simulated hail study experiment.</label>\n",
@@ -656,7 +607,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -878,7 +829,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 20,
    "metadata": {
     "scrolled": true
    },
@@ -898,10 +849,10 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.YouTubeVideo at 0x7ff9bac4bc50>"
+       "<IPython.lib.display.YouTubeVideo at 0x7efcc21f4e10>"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -922,7 +873,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -939,10 +890,10 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.YouTubeVideo at 0x7ff9bac60128>"
+       "<IPython.lib.display.YouTubeVideo at 0x7efcc1b86da0>"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -954,7 +905,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 22,
    "metadata": {
     "scrolled": true
    },
@@ -973,10 +924,10 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.YouTubeVideo at 0x7ff9bd91c908>"
+       "<IPython.lib.display.YouTubeVideo at 0x7efcc1b869b0>"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
