Working on circles

--- a/Nicole/Circles.ipynb
+++ b/Nicole/Circles.ipynb
@@ -8,6 +8,37 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/javascript": [
+       "\n",
+       "            require.config({\n",
+       "                paths: {\n",
+       "                    ggb: \"https://cdn.geogebra.org/apps/deployggb\"\n",
+       "                }\n",
+       "            });\n",
+       "\n",
+       "            require([\"ggb\"]);\n",
+       "        "
+      ],
+      "text/plain": [
+       "<IPython.core.display.Javascript object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "from ggb import *\n",
+    "ggb = GGB()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -103,7 +134,67 @@
     "\n",
     "### But how do we measure circumference? \n",
     "\n",
-    "We can't just take a ruler and mesure out chucks then add it together. A circle is round and rulers are straight!\n"
+    "We can't just take a ruler and mesure out chuncks then add it together. A circle is round and rulers are straight! We could try to wrap a string around the circle then measure out the string while straight. \n",
+    "\n",
+    "The diameter is much easier to measure so if there's a way to calculate the circumference from the diameter, that would be much easier.\n",
+    "\n",
+    "#### How are circumference and diameter related?\n",
+    "\n",
+    "Use the slider below to change to diameter and see what happens to the circumference and what the value of $\\frac{Circumference}{Diameter}$ is:\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div id=\"ggb_1_0e\"></div>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/javascript": [
+       "var ggb_1_0e = new GGBApplet({\"material_id\": \"bwfcyyrs\"}, \"ggb_1_0e\", false); ggb_1_0e.inject(); "
+      ],
+      "text/plain": [
+       "<IPython.core.display.Javascript object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "ggb.material('bwfcyyrs').draw()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Does the value of $\\frac{Circumference}{Diameter}$ change? Do you recognize this value? What's special about the circumference when the diameter is 1?\n",
+    "\n",
+    "## 3.14159265358779323846...\n",
+    "\n",
+    "The ratio between the circumference of a circle and it's diameter is the famous constant pi! <br>\n",
+    "If you've seen the movie Wonderpark, they actually sing a song about pi on the bus to math camp. <br>\n",
+    "Now math camp isn't for everyone, but pi should be. Pi is very important when it comes to circles.\n",
+    "\n",
+    "We represent pi or 3.14159... with this symbol: $ \\pi $\n",
+    "\n",
+    "### Back to circumference\n",
+    "\n",
+    "Now that we know this relation between circumference and diameter, we can calculate circumference from knowing the diameter!\n",
+    "$$ Circumference = Diameter \\times \\pi $$\n"
    ]
   },
   {
